Fix card image paths, add placeholder image, fix thumbnail overflow

--- a/src/components/GrailCard.css
+++ b/src/components/GrailCard.css
@@ -25,6 +25,8 @@
   flex-shrink: 0;
   width: 36px;
   height: 50px;
+  overflow: hidden;
+  border-radius: 3px;
 }
 
 .grail-card__image img {
