--- a/src/components/TopChaseRow.css
+++ b/src/components/TopChaseRow.css
@@ -15,6 +15,8 @@
   flex-shrink: 0;
   width: 36px;
   height: 50px;
+  overflow: hidden;
+  border-radius: 3px;
 }
 
 .top-chase-row__image img {
